<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:subtitle="@string/weather_in_your_pocket"
        app:subtitleCentered="true"
        app:title="@string/app_name"
        app:titleCentered="true">

        <ImageButton
            android:id="@+id/languageButton"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:scaleType="centerInside"
            android:layout_gravity="end"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/icon_description"
            android:src="@drawable/ic_language_globe"
            app:tint="?colorOnPrimary" />
    </com.google.android.material.appbar.MaterialToolbar>

</com.google.android.material.appbar.AppBarLayout>